NetBSD Problem Report #50184

From martin@duskware.de  Mon Aug 31 20:34:27 2015
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 86915A65B8
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 31 Aug 2015 20:34:27 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: kernel assertion failure 
X-Send-Pr-Version: 3.95

>Number:         50184
>Category:       kern
>Synopsis:       kernel assertion failure
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 31 20:35:00 +0000 2015
>Closed-Date:    Wed Sep 09 06:34:44 +0000 2015
>Last-Modified:  Wed Sep 09 06:34:44 +0000 2015
>Originator:     Martin Husemann
>Release:        NetBSD 7.99.21
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD unpluged.duskware.de 7.99.21 NetBSD 7.99.21 (UNPLUGED) #84: Mon Aug 31 14:31:42 CEST 2015 martin@seven-days-to-the-wolves.aprisoft.de:/ssd/src/sys/arch/evbarm/compile/UNPLUGED evbarm
Architecture: earm
Machine: evbarm
>Description:

During atf test runs I get repeatably a kernel crash (last time during the 
kqueue tests, not sure if previous run had it at the same test) on a diskless
arm client.

panic: kernel diagnostic assertion "rt != NULL" failed: file "../../../../netinet/if_arp.c", line 1431 
cpu0: Begin traceback...
0xcbc81eb4: c004bc78
0xcbc81ee4: c021c804
0xcbc81efc: c032ef88
0xcbc81f44: c00b94b4
0xcbc81f74: c014168c
0xcbc81fac: c0135148

(can decode frames tomorrow)

>How-To-Repeat:
cd /usr/tests && atf-run|atf-report
on a evbarm diskless machine.

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50184 CVS commit: src/sys/netinet
Date: Wed, 9 Sep 2015 01:24:01 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Wed Sep  9 01:24:01 UTC 2015

 Modified Files:
 	src/sys/netinet: if_arp.c

 Log Message:
 Remove wrong KASSERT in arptfree

 la_rt can be NULL because arptimer that calls arptfree doesn't always
 free llentry so llentry can remain with la_rt == NULL. So we instead
 check whether la_rt is NULL or not and do arptfree if not.

 This fixes PR kern/50184 (confirmed by martin@) and
 PR kern/50186 (maybe).


 To generate a diff of this commit:
 cvs rdiff -u -r1.179 -r1.180 src/sys/netinet/if_arp.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 09 Sep 2015 06:34:44 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.